...
            
            // Picker
            infoScene.picker.delegate = self
            
            if indexPath.row == 4{
                cell.textView.tag = 0
                cell.hintLabel.text = "Teacher's Name"
                if dataFlow!.name == ""{
                    cell.textView.textColor = .lightGray
                    cell.textView.text = "(Required)"
                }else{
                    cell.textView.textColor = .black
                    cell.textView.text = dataFlow!.name
                }
                cell.textView.inputView = nil
                cell.textView.addTwoBarButtons(leftTitle: "Paste", rightTitle: "Done", target: self, leftSelector: #selector(tabPaste), rightSelector: #selector(tapDone))
                cell.textView.isAccessibilityElement = true
                cell.textView.accessibilityIdentifier = "Teacher's Name"
            }else if indexPath.row == 5{
                cell.hintLabel.text = "Grade"
                cell.textView.inputView = infoScene.picker
                cell.textView.isAccessibilityElement = true
                cell.textView.accessibilityIdentifier = "Grade"
                infoScene.setPickerLayout(view:self.view)
                cell.textView.tag = 1
                if dataFlow!.grade == ""{
                    cell.textView.textColor = .lightGray
                    cell.textView.text = "(Required)"
                }else{
                    cell.textView.textColor = .black
                    cell.textView.text = dataFlow!.grade
                }
                cell.textView.addThreeBarButtons(title1: "Keyboard", title2: "Select A Grade", title3: "Done", target: self, selector1: #selector(tabKeyboard), selector2: #selector(tabSelect), selector3: #selector(tapDone))
            }else if indexPath.row == 6{
                cell.textView.tag = 2
                cell.hintLabel.text = "Subject"
                cell.textView.isAccessibilityElement = true
                cell.textView.accessibilityIdentifier = "Subject"
                cell.textView.inputView = infoScene.picker
                if dataFlow!.subject == ""{
                    cell.textView.textColor = .lightGray
                    cell.textView.text = "(Required)"
...
                    cell.textView.textColor = .black
                    cell.textView.text = dataFlow!.subject
                }
                cell.textView.addThreeBarButtons(title1: "Keyboard", title2: "Select A Subject", title3: "Done", target: self, selector1: #selector(tabKeyboard), selector2: #selector(tabSelect), selector3: #selector(tapDone))
            }else if indexPath.row == 7{
                cell.textView.tag = 3
                cell.hintLabel.text = "Lesson Title"
                cell.hintLabel.isAccessibilityElement = true
                cell.textView.accessibilityIdentifier = "Lesson Title"
                if dataFlow!.lessonTitle == ""{
                    cell.textView.textColor = .lightGray
                    cell.textView.text = "(Required)"
                }else{
...
                    cell.textView.text = dataFlow!.lessonTitle
                }
                cell.textView.inputView = nil
                cell.textView.addTwoBarButtons(leftTitle: "Paste", rightTitle: "Done", target: self, leftSelector: #selector(tabPaste), rightSelector: #selector(tapDone))
            }else if indexPath.row == 8{
                cell.textView.tag = 4
                cell.hintLabel.text = "Email"
                cell.hintLabel.isAccessibilityElement = true
                cell.textView.accessibilityIdentifier = "Email"
                if dataFlow!.email == ""{
                    cell.textView.textColor = .lightGray
                    cell.textView.text = "(Optional)"
                }else{
...
