//
//  InfoModel.swift
//  MyLessonPlan
//
//  Created by Yong Yang on 5/8/20.
//  Copyright © 2020 Edison Yang. All rights reserved.
//

import Foundation

class InfoModel{
    let gradeList = ["Grade-K", "Grade-1", "Grade-2","Grade-3", "Grade-4", "Grade-5", "Grade-6"
        , "Grade-7", "Grade-8", "Grade-9", "Grade-10", "Grade-11", "Grade-12"]
    let subjectList = ["Math", "Language", "Arts", "Science", "P.E./Help", "Social Studies"]
    var navTilte = "Teacher's\nInfomation"
    var continueButtonTitle = "Save and Continue to\nContent Standard →"
    var popupTitleOnRoadMap = "Welcome to the Help Popup!"
    var popupContentOnRoadMap = "Use this road map to navigate directly to sections of your lesson plan."
    
    var popupTitleNextToPercentage = "My Lesson Plan Required Information"
    var popupContentNextToPercentage = "This is an explanation of this percentage"
}
